catalog/app.updates

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,61 @@
 /* TODO: Make it awesome */
+
+h1 {
+
+
+
+}
+
+ul {
+
+
+}
+
+header {
+
+
+}
+
+.card  {
+
+
+}
+
+body {
+
+}
+
+.copy {
+
+
+}
+
+.deck col-1 {
+
+}
+
+.deck col-2 {
+
+
+}
+
+table {
+
+
+
+}
+
+tr {
+
+
+}
+
+th {
+
+
+}
+
+ol {
+
+    
+}
