--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
 /* TODO: Make it awesome */
 
 h1 {
+    font-size: 30px;
+    text-align: center;
+    padding: 1rem;
+    margin: 1rem;
+}
 
-
-
+#catalog{
+    
 }
 
 ul {
@@ -22,6 +27,8 @@ header {
 }
 
 body {
+    background-color: lavender;
+    align-items: center;
 
 }
 
